wip: リファクタリング途中
