# backend/presenter/rest/schema.gen.go
@@ -1,11 +1,12 @@
-// Package domain provides primitives to interact with the openapi HTTP API.
+// Package rest provides primitives to interact with the openapi HTTP API.
 //
 // Code generated by github.com/deepmap/oapi-codegen version v1.12.4 DO NOT EDIT.
-package domain
+package rest
 
 import (
 	"time"
 
+	"github.com/arumakan1727/todo-app-go-react/domain"
 	openapi_types "github.com/deepmap/oapi-codegen/pkg/types"
 )
 
@@ -20,13 +21,8 @@ const (
 	TaskStatusFilterTodo TaskStatusFilter = "todo"
 )
 
-// AuthToken defines model for AuthToken.
-type AuthToken struct {
-	AccessToken string `json:"accessToken"`
-}
-
 // Password defines model for Password.
-type Password string
+type Password = string
 
 // ReqCreateAuthToken defines model for ReqCreateAuthToken.
 type ReqCreateAuthToken struct {
@@ -52,45 +48,53 @@ type ReqPatchTask struct {
 	Title *TaskTitle `json:"title,omitempty"`
 }
 
-// Task defines model for Task.
-type Task struct {
+// RespAuthToken defines model for RespAuthToken.
+type RespAuthToken struct {
+	AccessToken string `json:"accessToken"`
+}
+
+// RespTask defines model for RespTask.
+type RespTask struct {
 	CreatedAt time.Time `json:"createdAt"`
 	Done      bool      `json:"done"`
 	Id        TaskID    `json:"id"`
 	Title     string    `json:"title"`
 }
 
-// TaskID defines model for TaskID.
-type TaskID uint64
-
-// TaskList defines model for TaskList.
-type TaskList struct {
-	Items      []Task `json:"items"`
-	TotalCount int    `json:"totalCount"`
+// RespTaskList defines model for RespTaskList.
+type RespTaskList struct {
+	Items      []RespTask `json:"items"`
+	TotalCount int        `json:"totalCount"`
 }
 
-// TaskStatusFilter タスクの完了状態のフィルタリング指定
-type TaskStatusFilter string
-
-// TaskTitle defines model for TaskTitle.
-type TaskTitle string
-
-// User defines model for User.
-type User struct {
+// RespUser defines model for RespUser.
+type RespUser struct {
 	CreatedAt   time.Time           `json:"createdAt"`
 	DisplayName string              `json:"displayName"`
 	Email       openapi_types.Email `json:"email"`
 	Id          UserID              `json:"id"`
 }
 
-// UserID defines model for UserID.
-type UserID uint64
-
-// UserList defines model for UserList.
-type UserList struct {
-	Items      []User `json:"items"`
-	TotalCount int    `json:"totalCount"`
+// RespUserList defines model for RespUserList.
+type RespUserList struct {
+	Items      []RespUser `json:"items"`
+	TotalCount int        `json:"totalCount"`
 }
+
+// TaskID defines model for TaskID.
+type TaskID = domain.TaskID
+
+// TaskStatusFilter タスクの完了状態のフィルタリング指定
+type TaskStatusFilter string
+
+// TaskTitle defines model for TaskTitle.
+type TaskTitle = string
+
+// UserID defines model for UserID.
+type UserID = domain.UserID
+
+// Resp200Task defines model for Resp200Task.
+type Resp200Task = RespTask
 
 // ListTasksParams defines parameters for ListTasks.
 type ListTasksParams struct {
